Cop Button Fixed

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -30,3 +30,7 @@ formats:
 # python:
 #    install:
 #    - requirements: docs/requirements.txt
+
+python:
+  install:
+    - requirements: docs/requirements.txt
